--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       loadSidebar: true,
       loadNavbar: true,
       mergeNavbar: true,
-      name: 'VAULTS OF VAARN',
+      name: 'Beyond the Wall House Rules',
       nameLink: {
         '/ko/': '#/ko/',
         '/': '#/',
